syntax = "proto3";

package request;

option java_multiple_files=true;
option java_package="grpc.booking.v2.dto.request";

message CheckBookingByIdRequest {
  int32 booking_id = 1;
}