syntax = "proto3";

package service;

option java_multiple_files=true;
option java_package="grpc.booking.v2.service";

import "booking/v2/dto/request/check-booking-by-id-request.proto";
import "booking/v2/dto/response/check-booking-by-id-response.proto";

service BookingCheckingService {
  rpc CheckBookingById(request.CheckBookingByIdRequest) returns (response.CheckBookingByIdResponse){};
}